# rss-actions

./: .gitignore  README.md  pyproject.toml
rss_actions/: cli.py  config.py  runner.py
tests/: test_rss_actions.py
